<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimaryDark"
  tools:context=".MainActivity">

    <TextView
      android:id="@+id/title_grade_calc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="20dp"
      android:layout_centerHorizontal="true"
      android:text="@string/grade_calculator"
      android:textColor="@color/colorAccent"
      android:textSize="32dp" />

    <ScrollView
      android:id="@+id/scrollview_marks"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_below="@id/title_grade_calc"
      android:layout_above="@id/optional_tablelayout"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="10dp"
      android:layout_marginRight="50dp"
      android:layout_marginLeft="50dp">
        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:orientation="vertical">

            <TableLayout
              android:id="@+id/marks_tablelayout"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:stretchColumns="0,1">
                <TableRow
                  android:id="@+id/marks_row1"
                  android:layout_width="match_parent"
                  android:layout_height="50dp">
                    <TextView
                      android:id="@+id/text_mark"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="4dp"
                      android:textColor="@color/colorHighEmp"
                      android:textSize="20dp"
                      android:text="@string/mark"/>
                    <TextView
                      android:id="@+id/text_weight"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginRight="5dp"
                      android:layout_gravity="right"
                      android:textColor="@color/colorHighEmp"
                      android:textSize="20dp"
                      android:text="@string/weight_in_percent"/>
                </TableRow>

                <TableRow
                  android:id="@+id/marks_row2"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:layout_marginTop="10dp">
                    <EditText
                      android:id="@+id/user_mark1"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:inputType="numberDecimal"
                      android:textColorHint="@color/colorMedEmp"
                      android:textColor="@color/colorAccent"
                      android:textSize="20dp"
                      android:hint="@string/mark"/>
                    <EditText
                      android:id="@+id/user_weight1"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:inputType="numberDecimal"
                      android:textColorHint="@color/colorMedEmp"
                      android:textColor="@color/colorAccent"
                      android:textSize="20dp"
                      android:hint="@string/weight"/>
                </TableRow>

                <TableRow
                  android:id="@+id/marks_row3"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:layout_marginTop="10dp">
                    <EditText
                      android:id="@+id/user_mark2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:inputType="numberDecimal"
                      android:textColorHint="@color/colorMedEmp"
                      android:textColor="@color/colorAccent"
                      android:textSize="20dp"
                      android:hint="@string/mark"/>
                    <EditText
                      android:id="@+id/user_weight2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:inputType="numberDecimal"
                      android:textColorHint="@color/colorMedEmp"
                      android:textColor="@color/colorAccent"
                      android:textSize="20dp"
                      android:hint="@string/weight"/>
                </TableRow>

                <TableRow
                  android:id="@+id/marks_row4"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:layout_marginTop="10dp">
                    <EditText
                      android:id="@+id/user_mark3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:inputType="numberDecimal"
                      android:textColorHint="@color/colorMedEmp"
                      android:textColor="@color/colorAccent"
                      android:textSize="20dp"
                      android:hint="@string/mark"/>
                    <EditText
                      android:id="@+id/user_weight3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:inputType="numberDecimal"
                      android:textColorHint="@color/colorMedEmp"
                      android:textColor="@color/colorAccent"
                      android:textSize="20dp"
                      android:hint="@string/weight"/>
                </TableRow>

                <TableRow
                  android:id="@+id/marks_row5"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:layout_marginTop="10dp">
                    <EditText
                      android:id="@+id/user_mark4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:inputType="numberDecimal"
                      android:textColorHint="@color/colorMedEmp"
                      android:textColor="@color/colorAccent"
                      android:textSize="20dp"
                      android:hint="@string/mark"/>
                    <EditText
                      android:id="@+id/user_weight4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:inputType="numberDecimal"
                      android:textColorHint="@color/colorMedEmp"
                      android:textColor="@color/colorAccent"
                      android:textSize="20dp"
                      android:hint="@string/weight"/>
                </TableRow>

            </TableLayout>

            <Button
              android:id="@+id/add_assignment"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:background="@drawable/button_with_feedback"
              android:textColor="@color/colorHighEmp"
              android:text="@string/add_assignment"
              android:onClick="buttonClick"/>

            <Button
              android:id="@+id/exit"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:background="@drawable/button_with_feedback"
              android:textColor="@color/colorRed"
              android:text="@string/exit"
              android:onClick="buttonClick"/>

        </LinearLayout>

    </ScrollView>

    <TableLayout
      android:id="@+id/optional_tablelayout"
      android:layout_above="@id/ll_clear_comp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="50dp"
      android:layout_marginLeft="50dp"
      android:stretchColumns="0,1"
      android:gravity="center">
        <TableRow
          android:id="@+id/row_optional1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:gravity="center">
            <TextView
              android:id="@+id/text_remaining_avg"
              android:textColor="@color/colorHighEmp"
              android:text="@string/remaining_avg_needed"/>
            <EditText
              android:id="@+id/edit_remaining_avg"
              android:layout_gravity="center"
              android:textColorHint="@color/buttonGrey"
              android:hint="@string/optional"
              android:inputType="numberDecimal"
              android:textColor="@color/colorHighEmp"/>
        </TableRow>

        <TableRow
          android:id="@+id/row_optional2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:gravity="center">
            <TextView
              android:id="@+id/text_ending_avg"
              android:textColor="@color/colorHighEmp"
              android:text="@string/ending_avg_given"/>
            <EditText
              android:id="@+id/edit_ending_avg"
              android:layout_gravity="center"
              android:textColorHint="@color/buttonGrey"
              android:hint="@string/optional"
              android:inputType="numberDecimal"
              android:textColor="@color/colorHighEmp"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
      android:id="@+id/ll_clear_comp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="50dp">
        <Button
          android:id="@+id/clear_btn"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:background="@drawable/button_with_feedback"
          android:padding="10dp"
          android:text="@string/clear"
          android:textColor="@color/colorAccent"
          android:onClick="buttonClick"/>

        <View
          android:layout_width="50dp"
          android:layout_height="match_parent"
          android:layout_weight="1"/>

        <Button
          android:id="@+id/compute_btn"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:background="@drawable/button_with_feedback"
          android:padding="10dp"
          android:text="@string/compute"
          android:textColor="@color/colorAccent"
          android:onClick="buttonClick"/>
    </LinearLayout>

</RelativeLayout>